catkin_ws/logs/backend/build.make.744.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:285:37: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
    if (slam.getBadFrameCounter() == badFrameCnt)
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:305:13: error: expected unqualified-id before ‘=’ token
    Matrix4f = px4.getLpe();
             ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
